' Copyright (C) 2019 - present Juergen Zimmermann, Hochschule Karlsruhe
' Copyright (C) 2019 - present Botan Coban
'
' This program is free software: you can redistribute it and/or modify
' it under the terms of the GNU General Public License as published by
' the Free Software Foundation, either version 3 of the License, or
' (at your option) any later version.
'
' This program is distributed in the hope that it will be useful,
' but WITHOUT ANY WARRANTY; without even the implied warranty of
' MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
' GNU General Public License for more details.
'
' You should have received a copy of the GNU General Public License
' along with this program.  If not, see <https://www.gnu.org/licenses/>.

' Preview durch <Alt>d

@startuml Entity

package typeorm {
  class "@Entity" as Entity
  hide Entity circle
  class "@Column" as Column
  hide Column circle
  class "@PrimaryColumn" as PrimaryColumn
  hide PrimaryColumn circle
  class "@OneToMany" as OneToMany
  hide OneToMany circle
  class "@JoinColumn" as JoinColumn
  hide JoinColumn circle
  class "@ManyToOne" as ManyToOne
  hide ManyToOne circle
  class "@OneToOne" as OneToOne
  hide OneToOne circle
  class "@CreateDateColumn" as CreateDateColumn
  hide CreateDateColumn circle
  class "@UpdateDateColumn" as UpdateDateColumn
  hide UpdateDateColumn circle
}

package entity {
  class Universitaet <<entity>> <<@Entity>> {
    @PrimaryGeneratedColumn() readonly id: number
    @VersionColumn() readonly version: number
    @Column() readonly name: string
    @Column('varchar') readonly standort: string
    @Column('int') readonly anzahlStudierende: number
    @Column('varchar') readonly homepage: string
    @Column('int') readonly gegruendet: number
    @Column('simple-array') readonly fakultaeten: string[]
    @Column('int') readonly ranking: number
    @CreateDateColumn() readonly erzeugt: Date
    @UpdateDateColumn() readonly aktualisiert: Date
  }

  class Bibliothek <<entity>> <<@Entity>> {
    @PrimaryGeneratedColumn() readonly id: number
    @Column() readonly name: string
    @Column('varchar') readonly isil: string
  }

  class Kurs <<entity>> <<@Entity>> {
    @PrimaryGeneratedColumn() readonly id: number
    @Column() readonly titel: string
    @Column('date') readonly startDatum: Date
  }



  Universitaet *--> "1" Bibliothek : @OneToOne() \nbibliothek
  Universitaet *--> "*" Kurs : @OneToMany() \nkurse

  Universitaet .right.> Entity
}

hide empty members

footer (c) Botan Coban

@enduml
